[gd_scene load_steps=13 format=3 uid="uid://dg8loiitnsp1v"]

[ext_resource type="Script" uid="uid://d274edgudavt4" path="res://Enemy/01Boss/Script/boss_01_mad_forest.gd" id="1_6e38a"]
[ext_resource type="Texture2D" uid="uid://cusdvk7qtk1cu" path="res://Enemy/01Boss/Sprite/cyclop.png" id="1_7m0bo"]
[ext_resource type="PackedScene" uid="uid://cnk3iq06f5ra0" path="res://FX/Blood/blood_explosion.tscn" id="2_ugg3s"]
[ext_resource type="Texture2D" uid="uid://b40blu80lev78" path="res://FX/shadow.png" id="3_jl7qp"]
[ext_resource type="PackedScene" uid="uid://ces4suctrspti" path="res://Hud/enemy_healthbar/healthbar.tscn" id="4_pvx50"]
[ext_resource type="FontFile" uid="uid://cyhlg16qsrerc" path="res://Hud/fonts/m3x6.ttf" id="5_7qft7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7m0bo"]
radius = 7.0
height = 32.0

[sub_resource type="Animation" id="Animation_pvx50"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack_area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:is_attacking")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ugg3s"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("attack_area/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:is_attacking")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6e38a"]
resource_name = "walk"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_boss:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7qft7"]
_data = {
&"RESET": SubResource("Animation_pvx50"),
&"attack": SubResource("Animation_ugg3s"),
&"walk": SubResource("Animation_6e38a")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7m0bo"]
radius = 20.0

[node name="Boss01_Cyclops" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 20
script = ExtResource("1_6e38a")
blood_explosion = ExtResource("2_ugg3s")

[node name="sprite_boss" type="Sprite2D" parent="."]
texture = ExtResource("1_7m0bo")
flip_h = true
hframes = 3
vframes = 3
frame = 3

[node name="Shadow" type="Sprite2D" parent="sprite_boss"]
position = Vector2(-3, 26)
texture = ExtResource("3_jl7qp")

[node name="CollisionBoss" type="CollisionShape2D" parent="."]
position = Vector2(-4, 9)
shape = SubResource("CapsuleShape2D_7m0bo")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7qft7")
}

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2(19, 9)
shape = SubResource("CircleShape2D_7m0bo")
disabled = true
debug_color = Color(1, 0.00784314, 0.0431373, 0.113725)

[node name="DmgNmbrPosition" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Healthbar" parent="CanvasLayer" instance=ExtResource("4_pvx50")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -236.0
offset_top = -33.0
offset_right = 236.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 536.0
offset_top = 577.0
offset_right = 604.0
offset_bottom = 608.667
theme_override_fonts/font = ExtResource("5_7qft7")
theme_override_font_sizes/font_size = 40
text = "Cyclops"

[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
